spectec/test/elab/neg/type-funarg-expected-exp-got-fun.spectec
;; A call passes a function-argument where an expression argument
;; is expected.

dec $g : nat

dec $caller(nat) : nat

dec $main : nat
def $main = $caller(def $g)
